--- a/src/com/neuq/db/db.properties
+++ b/src/com/neuq/db/db.properties
@@ -1,4 +1,4 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://123.206.13.113:3306/financial
+url=jdbc:mysql://**************:3306/financial
 user=root
 pwd=123456
